force-app/hfs-backend/main/default/objects/hfs_Favorite__c/hfs_Favorite__c.object-meta.xml
<CustomObject>
    <description>Stores a signed-in user&apos;s bookmarked portal pages/assets so My Toolbox can show a real per-user count and list. Owner-based; per-user scoping is enforced by OwnerId under Private OWD.</description>
    <label>Favourite</label>
    <nameField>
        <label>Favourite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favourites</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>