force-app/hfs-backend/main/default/objects/hfs_Favorite__c/fields/hfs_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>hfs_Item_Type__c</fullName>
    <description>Origin of the favourite (Asset, Training, Page, Program) for future grouping.</description>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Page</fullName>
                <default>true</default>
                <label>Page</label>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>