force-app/hfs-backend/main/default/objects/hfs_Favorite__c/fields/hfs_Target_URL__c.field-meta.xml
<CustomField>
    <fullName>hfs_Target_URL__c</fullName>
    <description>Site-relative destination the favourite points to.</description>
    <inlineHelpText>Site-relative path the favourite opens (starts with a single /).</inlineHelpText>
    <label>Target URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>